# bazel_ros2_demo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  launch_all.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: bootstrap.sh  clangd.sh
cpp/: BUILD.bazel  car_state.cpp
messages/: BUILD.bazel
py/: BUILD.bazel  listener.py
test/cpp/: BUILD.bazel
test/python/: BUILD.bazel
test/ros2/: BUILD.bazel  chatter.py  listener.cpp  py_talker.py
tex/: notes.tex
tools/: BUILD.bazel  requirements.txt
