load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")

ros2_launch(
    name = "launch_all",
    idl_deps = [
        # Add here a list of types the foxglove_bridge needs to work on.
        #"@ros2_rcl_interfaces//:rcl_interfaces",
        #"@ros2_common_interfaces//:geometry_msgs",
        "@ros2_common_interfaces//:std_msgs",
        #"@ros2_geometry2//:tf2_msgs",
    ],
    launch_file = "launch_all.py",
    nodes = [
        "//py:listener",
        "//cpp:car_state",
        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:foxglove_bridge_node",
    ],
    deps = [
        "@com_github_mvukov_rules_ros2//third_party/foxglove_bridge:utils",
    ],
)
