load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")

ros2_cpp_binary(
    name = "car_state",
    srcs = ["car_state.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//messages:cpp_car_msgs",
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)
