load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    #"c_ros2_interface_library",
    "cpp_ros2_interface_library",
    "py_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "car_msgs",
    srcs = ["car_msgs/msg/CarState.msg"],  # glob(["car_msgs/msg/*.msg"]),
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_common_interfaces//:std_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces",
    ],
)

cpp_ros2_interface_library(
    name = "cpp_car_msgs",
    visibility = ["//visibility:public"],
    deps = [":car_msgs"],
)

py_ros2_interface_library(
    name = "py_car_msgs",
    visibility = ["//visibility:public"],
    deps = [":car_msgs"],
)
