load("@pip_requirements//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "listener",
    srcs = ["listener.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
        requirement("numpy"),
    ],
)
