load("@com_github_mvukov_rules_ros2//ros2:bag.bzl", "ros2_bag")
load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_binary")
load("@com_github_mvukov_rules_ros2//ros2:launch.bzl", "ros2_launch")
load("@com_github_mvukov_rules_ros2//ros2:test.bzl", "ros2_test")
load("@com_github_mvukov_rules_ros2//ros2:topic.bzl", "ros2_topic")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "py_talker",
    srcs = ["py_talker.py"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
)

ros2_cpp_binary(
    name = "listener",
    srcs = ["listener.cpp"],
    deps = [
        "@ros2_common_interfaces//:cpp_std_msgs",
        "@ros2_rclcpp//:rclcpp",
    ],
)

ros2_launch(
    name = "chatter",
    launch_file = "chatter.py",
    nodes = [
        ":listener",
        ":py_talker",
    ],
)

ros2_topic(
    name = "topic",
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
    ],
)
